person logo fix

--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
         <div class="header">
                 <div class="photo">
                     <div class="buttonP">  
-                    <img class="person" src="person.png">
-                    <button id="snap">Snap Photo</button>
-                    </div>
-                     <video id="video" width="320" height="240" controls></video>
-                     <canvas id="canvas" width="320" height="240"></canvas>
+                      <button id="snap">Snap Photo</button>
+                      <img class="person" src="person.png">
                      </div>
+                     <video id="video" width="320" height="240" controls>
+                     </video>
+                     <canvas id="canvas" width="320" height="240">
+                     </canvas>
                  </div>
+                 
                  <div class="adress">
                     <img class="location" src="location.png">
-                    <button class="buttonL" onclick="getLocation()"></button>
-                    <p id="demo"></p>
+                    <button class="buttonL" onclick="getLocation()">
+                    </button>
                  </div>  
-                  </div>
+            </div>
 
     <div class="filling">
         <img class="inside" src="salmon.png">
@@ -37,25 +39,24 @@
         <img class="inside8" src="oreo.png">
         <img class="inside9" src="cookie-dough.png">
         <img class="inside1" src="nutella.png">
- </div>
+     </div>
     <div class="bread">
         
-   <img class="bagel" src="plain-b.png">
-   <img class="bagel" src="poppy-b.png">
-   <img class="bagel" src="everything-b.png">
-   <img class="bagel" src="chocolate-b.png">
-   <img class="bagel" src="rainbow-b.png">
+       <img class="bagel" src="plain-b.png">
+       <img class="bagel" src="poppy-b.png">
+       <img class="bagel" src="everything-b.png">
+       <img class="bagel" src="chocolate-b.png">
+       <img class="bagel" src="rainbow-b.png">
    
-  <div class="buttons">
-   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 0)">&#10094;</button>
-   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 0)">&#10095;</button>
-</div>
-</div>
-<a href="checkout.html">
-    <div href class="footer">
-    <div class="order"></div>
-</div>
-</a>
+       <div class="buttons">
+          <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 0)">&#10094;</button>
+          <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 0)">&#10095;</button>
+         </div>
+     </div>
+   <a href="checkout.html">
+         <div class="order">
+         </div>
+     </a>
 
 <script src="jquery-3.3.1.min.js"></script>
 <script src="main.js"></script>
