--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                  <div class="adress">
                     <img class="location" src="location.png">
                     <button class="buttonL" onclick="getLocation()">
+                        get  location
                     </button>
+                    <p id="demo"></p>
                  </div>  
             </div>
 
@@ -53,12 +55,17 @@
           <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 0)">&#10095;</button>
          </div>
      </div>
-   <a href="checkout.html">
-         <div class="order">
-         </div>
-     </a>
+     <div  class="footer">
 
-<script src="jquery-3.3.1.min.js"></script>
-<script src="main.js"></script>
+        <a href="checkout.html">
+            <div class="order">
+            </div>
+         </a>
+         <div class="add">+
+         </div>
+     </div>
+
+     <script src="jquery-3.3.1.min.js"></script>
+     <script src="main.js"></script>
 </body>
 </html>
