--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
          </div>
      </div>
 
+     <div class="hide">
+         <div class="top"></div>
+         <div class="bottom"></div>
+     </div>
      <script src="jquery-3.3.1.min.js"></script>
      <script src="main.js"></script>
 </body>
